--- a/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/pycam/Gui/gtk-interface/pycam-project.ui
@@ -1091,7 +1091,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkVBox" id="vbox17">
+              <object class="GtkVBox" id="TasksTab">
                 <property name="visible">True</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">3</property>
@@ -1519,7 +1519,7 @@ This combination is added to the above task list.</property>
               </packing>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="TaskTab">
+              <object class="GtkLabel" id="TasksTabLabel">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Tasks</property>
               </object>
@@ -1742,128 +1742,135 @@ This feature requires the Open Dynamics Engine (ODE).</property>
                 <property name="tab_fill">False</property>
               </packing>
             </child>
-          </object>
-          <packing>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkFrame" id="SimulationWidget">
-            <property name="label_xalign">0</property>
-            <property name="shadow_type">none</property>
             <child>
-              <object class="GtkAlignment" id="alignment29">
-                <property name="visible">True</property>
-                <property name="left_padding">12</property>
+              <object class="GtkFrame" id="SimulationTab">
+                <property name="label_xalign">0</property>
+                <property name="shadow_type">none</property>
                 <child>
-                  <object class="GtkTable" id="SimulationWidgetTable">
+                  <object class="GtkAlignment" id="alignment29">
                     <property name="visible">True</property>
-                    <property name="n_rows">2</property>
-                    <property name="n_columns">2</property>
-                    <property name="column_spacing">4</property>
-                    <property name="row_spacing">2</property>
+                    <property name="left_padding">12</property>
                     <child>
-                      <object class="GtkButton" id="UpdateSimulationButton">
-                        <property name="label">gtk-refresh</property>
+                      <object class="GtkVBox" id="vbox23">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="tooltip_text" translatable="yes">Run the simulation again</property>
-                        <property name="use_stock">True</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options"></property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="ExitSimulationButton">
-                        <property name="label">gtk-close</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="tooltip_text" translatable="yes">Leave simulation mode</property>
-                        <property name="use_stock">True</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="top_attach">1</property>
-                        <property name="bottom_attach">2</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options"></property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkHBox" id="hbox20">
-                        <property name="visible">True</property>
-                        <property name="spacing">2</property>
+                        <property name="orientation">vertical</property>
                         <child>
-                          <object class="GtkLabel" id="SimulationDetailsControlLabel">
+                          <object class="GtkHBox" id="hbox20">
                             <property name="visible">True</property>
-                            <property name="xalign">0</property>
-                            <property name="xpad">5</property>
-                            <property name="label" translatable="yes">Simulation detail level (1..10):</property>
+                            <property name="spacing">2</property>
+                            <child>
+                              <object class="GtkLabel" id="SimulationDetailsControlLabel">
+                                <property name="visible">True</property>
+                                <property name="xalign">0</property>
+                                <property name="xpad">5</property>
+                                <property name="label" translatable="yes">Simulation detail level (1..10):</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkSpinButton" id="SimulationDetailsControl">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="max_length">6</property>
+                                <property name="invisible_char">&#x25CF;</property>
+                                <property name="adjustment">SimulationDetailsValue</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
                             <property name="position">0</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkSpinButton" id="SimulationDetailsControl">
+                          <object class="GtkLabel" id="label2">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="max_length">6</property>
-                            <property name="invisible_char">&#x25CF;</property>
-                            <property name="adjustment">SimulationDetailsValue</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="position">1</property>
-                          </packing>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options">GTK_FILL</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkLabel" id="label2">
-                        <property name="visible">True</property>
-                        <property name="xalign">0</property>
-                        <property name="label" translatable="yes">&lt;b&gt;Hint:&lt;/b&gt; take a look at the "show drill" and
+                            <property name="xalign">0</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Hint:&lt;/b&gt; take a look at the "show drill" and
 "OpenGL: polygon" settings in preferences.
 &lt;b&gt;Beware:&lt;/b&gt; the simulation feature is new and
 experimental. Thus you will quite probably stumble
-upon bugs and weird results.</property>
-                        <property name="use_markup">True</property>
+upon interesting bugs and weird results.</property>
+                            <property name="use_markup">True</property>
+                          </object>
+                          <packing>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkHButtonBox" id="hbuttonbox1">
+                            <property name="visible">True</property>
+                            <property name="spacing">3</property>
+                            <property name="layout_style">end</property>
+                            <child>
+                              <object class="GtkButton" id="UpdateSimulationButton">
+                                <property name="label">gtk-refresh</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <property name="use_stock">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkButton" id="ExitSimulationButton">
+                                <property name="label">gtk-close</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <property name="use_stock">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="position">2</property>
+                          </packing>
+                        </child>
                       </object>
-                      <packing>
-                        <property name="top_attach">1</property>
-                        <property name="bottom_attach">2</property>
-                        <property name="x_options"></property>
-                        <property name="y_options"></property>
-                      </packing>
                     </child>
                   </object>
                 </child>
+                <child type="label">
+                  <object class="GtkLabel" id="SimulationWidgetFrameLabel">
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes">&lt;b&gt;Simulation settings&lt;/b&gt;</property>
+                    <property name="use_markup">True</property>
+                  </object>
+                </child>
               </object>
+              <packing>
+                <property name="position">3</property>
+              </packing>
             </child>
-            <child type="label">
-              <object class="GtkLabel" id="SimulationWidgetFrameLabel">
+            <child type="tab">
+              <object class="GtkLabel" id="SimulationTabLabel">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">&lt;b&gt;Simulation settings&lt;/b&gt;</property>
-                <property name="use_markup">True</property>
+                <property name="label" translatable="yes">Simulation</property>
               </object>
+              <packing>
+                <property name="position">3</property>
+                <property name="tab_fill">False</property>
+              </packing>
             </child>
           </object>
           <packing>
-            <property name="expand">False</property>
-            <property name="position">1</property>
+            <property name="position">0</property>
           </packing>
         </child>
         <child>
@@ -1872,7 +1879,7 @@ upon bugs and weird results.</property>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="position">2</property>
+            <property name="position">1</property>
           </packing>
         </child>
         <child>
@@ -1901,7 +1908,7 @@ upon bugs and weird results.</property>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="position">3</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </object>
