--- a/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/pycam/Gui/gtk-interface/pycam-project.ui
@@ -4051,6 +4051,8 @@ You should have received a copy of the GNU General Public License along with thi
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
+                                            <property name="tooltip_text" translatable="yes">The Drop Cutter goes down to the lowest possible point at any location within the working area.
+This is suitable for finishing processes after removing the material above.</property>
                                             <property name="active">True</property>
                                             <property name="draw_indicator">True</property>
                                           </object>
@@ -4065,12 +4067,30 @@ You should have received a copy of the GNU General Public License along with thi
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
+                                            <property name="tooltip_text" translatable="yes">The Push Cutter removes material in multiple layers down to the bottom of the working area.
+This is suitable for roughly processing the material.
+It will spare some material close to the model (depending on the "step down" value).</property>
                                             <property name="draw_indicator">True</property>
                                             <property name="group">DropCutter</property>
                                           </object>
                                           <packing>
                                             <property name="expand">False</property>
                                             <property name="position">1</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkRadioButton" id="EngraveCutter">
+                                            <property name="label" translatable="yes">Engraving</property>
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="receives_default">False</property>
+                                            <property name="tooltip_text" translatable="yes">Engraving is only applicable to contour models (e.g. DXF files).</property>
+                                            <property name="draw_indicator">True</property>
+                                            <property name="group">DropCutter</property>
+                                          </object>
+                                          <packing>
+                                            <property name="expand">False</property>
+                                            <property name="position">2</property>
                                           </packing>
                                         </child>
                                       </object>
